<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_add_book">Создание книги</string>
    <string name="title_activity_phone_gallery">Галерея</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_uploaded_photo_gallery">Выберите изображения</string>
    <string name="app_name">Mimolet</string>
    <string name="action_settings">Найстройки</string>
    <string name="login">E-mail:</string>
    <string name="password">Password:</string>
    <string name="signin">Sign in</string>
    <string name="creating_book">Создание книги</string>
    <string name="book_name">Название книги</string>
    <string name="binding">Переплет:</string>
    <string name="size">Размер:</string>
    <string name="soft_with_clamp">Мягкий на скобе</string>
    <string name="title_activity_orders_list">Мои книги</string>
    <string name="logo">logo</string>
    <string name="loose_internet_connection">Отсутствует интернет соединение</string>
    <string name="albom_name_warning">Название альбома больше 40 символов! Измените название, пожалуйста!</string>
    <string name="page_under_work">Страница в стадии разработки</string>
    <string name="auth_data_warning">Неправильное имя пользователя или пароль!</string>
    <string name="order_item_error">Функционал пока не готов</string>
    <string name="no_image_found">Загрузите хотя бы 1 фотографию</string>
    <string name="entered_name_label">Вы зашли как:</string>
    <string name="facebook_label">Facebook</string>
    <string name="instagram_label">Instagram</string>
    <string name="google_plus_label">Google+</string>
    <string name="lenguage_choiser_label">Язык</string>
    <string name="add_photo_albomwithoutname">Введите название для Вашего альбома</string>
    <string name="edit_photo_activity">Оформление страницы</string>
    <string name="edit_photo_open_error">Ошибка редактирования фотографии</string>
    <string name="edit_photo_title">Оформление страницы</string>
    <string name="edit_photo_contentdescription">EditPhoto content description</string>
    <string name="editphoto_withoutBroderMode">Для указания цвета рамки включите отображение рамки в первом меню</string>
    <string name="preview_noname_album">Введите название альбома пожалуйста!</string>
    <string name="preview_less_then_twenty_photos">Надо добавить хотя бы 20 фотографий.</string>
    <string name="preview_less_more_then_ts">Можно добавить не больше 36 фотографий.</string>
    <string name="choose_layout_title">Выбор макета</string>
    <string name="choose_background_title">Выбор фона</string>
    <string name="background_color">Цвет фона:</string>
    <string name="border_color">Цвет рамки:</string>
    <string name="add_text">Добавление текста</string>
    <string name="font_size">Размер шрифта:</string>
    <string name="font_small">Маленький</string>
    <string name="font_medium">Средний</string>
    <string name="font_large">Большой</string>
    <string name="font">Шрифт:</string>
    <string name="color">Цвет:</string>
    <string name="change_photo_title">Изменение фотографии</string>
    <string name="phone_memory_label">Память телефона</string>
    <string name="settings_clear_settings">Очистить данные</string>
    <string name="order_list_contentdescription">OrderList content description</string>

    <string-array name="image_source_labels">
        <item>Память телефона</item>
        <item>Facebook</item>
        <item>Instagram</item>
        <item>Google+</item>
    </string-array>

    <string name="title_activity_face_book_auth">FaceBookAuth</string>
    <string name="hello_world">Hello world!</string>
    <string name="appID">492177964205714</string>
    <string name="server_unavailable">В данный момент сервер недоступен</string>
    <string name="unidentified_error">Неопознання ошибка. Сообщите о ней разработчикам пожалуйста!</string>
    <string name="add_book_contentdescription">Add button image</string>
    <string name="authorization_loginButton">Login button</string>
    <string name="authotization_logoImageDescript">Logo Image</string>
    <string name="authorization_ORimageDescript">OR image</string>
    <string name="authorization_registrationTextButton">Регистрация</string>
    <string name="authorization_forgetPasswordTextButton">Забыли пароль?</string>
    <string name="authorization_forgetPasswordImageDescript">ForgetPassword Image</string>
    <string name="authorization_registrationImageDescript">Registration Image</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration_enterYourLoginHere">Введите e-mail</string>
    <string name="registration_enterPassword">Введите пароль</string>
    <string name="registration_repeatPassword">Введите пароль еще раз</string>
    <string name="registration_registrationButtonText">Регистрация</string>
    <string name="registration_passwordNotEqual">Введенные пароли не совпадают</string>
    <string name="registration_passwordToShort">Веденный пароль слишком короткий. В пароле должно быть минимум 6 символов.</string>
    <string name="registration_thisIsNotEmail">Введите пожалуйста электонный адрес в первое поле</string>
    <string name="registration_wrongLoginToast">Пользователь с таким E-mail уже существует, попробуйте восстановить пароль к нему или выберете другой электронный адрес</string>
    <string name="restore_restoreButtonText">Восстановить пароль</string>
    <string name="restore_wrongEmail">Данный электронный адрес не зарегистрирован, проверьте правильность ввода</string>
    <string name="restore_passwordSended">Ваш пароль был выслан на указанную электронную почту</string>
    <string name="restore_thisIsNotEmail">Вы ввели не электронный адрес, повторите ввод!</string>
    <string name="restore_restoreRestoreText">Для восстановления пароля введите e-mail</string>
    <string name="title_activity_restore_password">RestorePassword</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <string name="purchase_imageDescription">PurchaseFrontImage</string>
    <string name="purchase_bindingDescript">Переплет:</string>
    <string name="purchase_coverDescription">Обложка:</string>
    <string name="purchase_paperDescription">Бумага:</string>
    <string name="purchase_printDescription">Печать:</string>
    <string name="purchase_blockSizeDescription">Размер блока:</string>
    <string name="purchase_pagesAmountDescription">Старниц:</string>
    <string name="purchase_amountDescription">Экземпляры</string>
    <string name="purchase_additionalPagesDescription">Доп страницы</string>
    <string name="purchase_togetherDescription">ВСЕГО</string>
    <string name="purchase_buttonPurchaseText">Заказать книгу</string>
    <string name="purchase_buttonDeleteText">Удалить книгу</string>
    <string name="purchase_testString">Needset</string>
    <string name="purchase_orderPurchaseSuccesfull">Спасибо за Ваш заказ! Ожидайте уведомления на e-mail с инструкциями по оплате.</string>
    <string name="purchase_contentdescription">Purchase content description</string>
    <string name="preview_fragment_contentdescription">PreviewFragment content description</string>
    <string name="stylepage_fragment_contentdescription">StylepageFragment content description</string>

</resources>