<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >
     
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/entered_name_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <de.ankri.views.Switch
            android:id="@+id/entered_name_choiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/facebook_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <de.ankri.views.Switch
            android:id="@+id/facebook_enable_choiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/instagram_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <de.ankri.views.Switch
            android:id="@+id/instagram_enable_choiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:textColor="@color/black" />
    </LinearLayout> -->

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/google_plus_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <de.ankri.views.Switch
            android:id="@+id/google_plus_enable_choiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
